fix imbd link, add all genres to home route randomizer, create movieData.js

--- a/views/pages/genre.ejs
+++ b/views/pages/genre.ejs
@@ -12,7 +12,7 @@
                 
                 <div class="col">
 
-                    <div class="card" id="movieCard">
+                    <div class="card h-100" id="movieCard">
 
                         <img src="<%= movie.posterURL %>" 
                             class="img-fluid image-movie-poster card-img-top" id="moviePoster" alt="<%= movie.title %> poster">
