--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -5,7 +5,7 @@
 
         <div class="container movie-grid">
             
-            <div class="row row-cols-1 row-cols-md-3 g-4" id="movieRow">
+            <div class="row row-cols-2 row-cols-md-4 row-cols-lg-6 g-3" id="movieRow">
         
                 <% movies.forEach(movie => { %>
             
