--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -15,7 +15,7 @@
 
                             <img src="<%= movie.posterURL %>" class="img-fluid image-movie-poster card-img-top " id="moviePoster" alt="<%= movie.title %> poster">
 
-                            <div class="card-body">
+                            <div class="card-body text-center">
 
                                 <h2 class="card-title" id="movieTitle">
                                     <%= movie.title %>
