--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,33 +12,34 @@
         <h1 class="display-1 main-heading text-center text-capitalize">Movies</h1>
         <nav class="navbar bg-body-tertiary" id="nav">
 
-            <div class="container-fluid">
+            <ul class="container-fluid nav">
 
                 <li class="nav-item">
                     <a href="/" class="nav-link">Home 🏡</a>
-                <li class="nav-item">
-                    <a href="/genre/animation" class="nav-link">Animation 🎈</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/genre/classic" class="nav-link">Classic 📼</a>
+                    <a href="/genre/animation" class="nav-link">🎈 Animation 🎈</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/genre/comedy" class="nav-link">Comedy 🤣</a>
+                    <a href="/genre/classic" class="nav-link">📼 Classic 📼</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/genre/drama" class="nav-link">Drama 🎭</a>
+                    <a href="/genre/comedy" class="nav-link">🤣 Comedy 🤣</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/genre/horror" class="nav-link">Horror 🧟</a>
+                    <a href="/genre/drama" class="nav-link">🎭 Drama 🎭</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/genre/family" class="nav-link">Family 👨🏼‍👩🏼‍👧🏼‍👦🏼</a>
+                    <a href="/genre/horror" class="nav-link">🧟‍♀️ Horror 🧟</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/genre/mystery" class="nav-link">Mystery ❔</a>
+                    <a href="/genre/family" class="nav-link">👨🏼‍👩🏼‍👧🏼‍👦🏼 Family 👨🏼‍👩🏼‍👧🏼‍👦🏼</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/genre/western" class="nav-link">Western 🤠</a>
+                    <a href="/genre/mystery" class="nav-link">❔ Mystery ❔</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/genre/western" class="nav-link">🤠 Western 🤠</a>
                 </li>
             </ul>
         </nav>
